--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 <section class="crud">
     <div class="container">
+        <h1  class="text-center mt-5">SimpleTodoList</h1>
        <div class="row mt-5">
            <div class="col-md-6 offset-md-3">
                <div class="input-group mb-3">
