--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                        <button class="btn btn-outline-success add-btn" type="button">добавить</button>
                    </div>
                </div>
-               <ul class="list-group to-do-list"></ul>
+               <ul class="list-group to-do-list">
+                   
+               </ul>
            </div>
        </div>
     </div>
