--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
-<section class="crud">
+<section class="todo">
     <div class="container">
-        <h1  class="text-center mt-5">SimpleTodoList</h1>
+        <h1  class="text-center mt-5 todo-title">Simple Todo List</h1>
        <div class="row mt-5">
            <div class="col-md-6 offset-md-3">
                <div class="input-group mb-3">
@@ -21,9 +21,7 @@
                        <button class="btn btn-outline-success add-btn" type="button">добавить</button>
                    </div>
                </div>
-               <ul class="list-group to-do-list">
-
-               </ul>
+               <ul class="list-group to-do-list"></ul>
            </div>
        </div>
     </div>
